semi-working-project -up for changes with histry in/out

--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -2,34 +2,39 @@
 
 {% block body %}
 
+        {{ msg }}
+
         <h2>Hello, welcome to accountant project</h2>
         What action are you interested in?
         <br>
         <br>
         Saldo
-        <form action="/check/" method="post">
+        <form action="/action" method="post">
+        <input type="hidden" name="method" value="saldo">
         <input autocomplete="off" autofocus name="change" required placeholder="value" type="text">
         <input autocomplete="off" name="comment" required placeholder="comment" type="text">
         <input type="submit" value="zmien saldo">
         </form>
         <br>
         Zakup
-        <form action="/check/" method="post">
-        <input autocomplete="off" autofocus name="productid" required placeholder="product id" type="text">
+        <form action="/action" method="post">
+        <input type="hidden" name="method" value="zakup">
+        <input autocomplete="off" autofocus name="product_id" required placeholder="product id" type="text">
         <input autocomplete="off" name="buy_price" required placeholder="price" type="text">
         <input autocomplete="off" name="buy_qty" required placeholder="amount" type="number">
         <input type="submit" value="kup">
         </form>
         <br>
         Sprzedaz
-        <form action="/check/" method="post">
+        <form action="/action" method="post">
+        <input type="hidden" name="method" value="sprzedaz">
         <input autocomplete="off" autofocus name="productid" required placeholder="product id" type="text">
         <input autocomplete="off" name="sell_price" required placeholder="price" type="text">
         <input autocomplete="off" name="sell_qty" required placeholder="amount" type="number">
         <input type="submit", value="sprzedaj">
         </form>
         <br>
-        <h3>Current balance:{{ balance }}</h3>
+        <h3>Current balance:{{ account }}</h3>
         <h3>
         Current stock:
         <br>
