--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -28,7 +28,7 @@
         Sprzedaz
         <form action="/action" method="post">
         <input type="hidden" name="method" value="sprzedaz">
-        <input autocomplete="off" autofocus name="productid" required placeholder="product id" type="text">
+        <input autocomplete="off" autofocus name="product_id" required placeholder="product id" type="text">
         <input autocomplete="off" name="sell_price" required placeholder="price" type="text">
         <input autocomplete="off" name="sell_qty" required placeholder="amount" type="number">
         <input type="submit", value="sprzedaj">
