--- a/project/templates/history.html
+++ b/project/templates/history.html
@@ -3,11 +3,8 @@
 {% block body %}
 
 <h1>History of transactions</h1>
-{% for action in history %}
-{% for line in action %}
+{% for line in history %}
 <div> {{ line }} </div>
 {% endfor %}
-{% endfor %}
-
 
 {% endblock %}
