change of last transaction info implemented to home.html template

--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-        {{ msg }}
+        <h5>Last transaction: {{ msg }}</h5>
 
         <h2>Hello, welcome to accountant project</h2>
         What action are you interested in?
